# dotmake

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  deps_graph.rs  deps_resolver.rs  identifier.rs  io.rs  main.rs  os.rs  types.rs
src/actions/: mod.rs
src/cli/: mod.rs  options.rs  subcommand.rs
src/cli/subcommand/: add.rs  completion.rs  exec.rs  install.rs  mod.rs
src/cli/subcommands/: mod.rs
src/config/: deps_graph.rs  deserializers.rs  mod.rs  parser.rs
src/config/rule_actions/: deps.rs  links.rs  mod.rs  pkgs.rs  shell_script.rs
src/config/types/: identifier.rs  list.rs  mod.rs
src/deps_resolver/: deps_graph.rs  mod.rs
src/deserializers/: mod.rs
