[package]
name = "dotmake"
version = "0.1.0"
authors = ["fimmind <fimmind@mail.ru>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["unix", "dotfiles", "configuration"]
categories = ["command-line-utilities"]

[[bin]]
name = "dotm"
path = "src/main.rs"

[dependencies]
structopt = "0.3.17"
dialoguer = "0.6.2"
serde_yaml = "0.8.15"
serde = "1.0.114"
serde_derive = "1.0.114"
lazy_static = "1.4.0"
